tdf#129930: Dispose SystemClipboard service early enough

At least on Windows, the related
CMtaOleClipboard::m_hClipboardChangedNotifierThread thread would otherwise still
run during cppuhelper::ServiceManager::disposing (but could try to create other
UNO services, which then throws a DeploymentException).

(There is also a GetSystemPrimarySelection similar to GetSystemClipboard in
include/vcl/transfer.hxx, which might or might not turn out to have a similar
issue.)

Change-Id: Ia64e708cf0578e3a127c1a56fbace577ecf4ee1f